// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityList mount 1`] = `
<div class="SharpEntityList">
	<div>Action bar</div>
	<div>
		<!---->
		<div class="MOCKED_SharpDataList">
			<div url="instanceUrl" class="MOCKED_SharpDataListRow"></div>
		</div>
	</div>
	<commandformmodal-stub entitykey="spaceship"></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;

exports[`EntityList mount with row actions 1`] = `
<div class="SharpEntityList">
	<div>Action bar</div>
	<div>
		<!---->
		<div class="MOCKED_SharpDataList">
			<div url="instanceUrl" class="MOCKED_SharpDataListRow">
				<div class="SharpEntityList__actions d-flex">
					<entityactions-stub config="[object Object]" hasstate="true" statedisabled="true" hascommands="true" commands=""></entityactions-stub>
				</div>
			</div>
		</div>
	</div>
	<commandformmodal-stub entitykey="spaceship"></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;
